# rpiclock

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DHT11.cpp  DHT11.h  RpiClock.cpp  RpiClock.h  RpiClock.qml  main.cpp  qmlmqttclient.cpp  resources.qrc  rpiclock.pro
src/dht11/: CMakeLists.txt  pi_2_dht_read.c  pi_2_dht_read.h
